@@ -1600,45 +1600,7 @@ block|{
 try|try
 block|{
 comment|/*        * Block on becoming the active master.        *        * We race with other masters to write our address into ZooKeeper.  If we        * succeed, we are the primary/active master and finish initialization.        *        * If we do not succeed, there is another active master and we should        * now wait until it dies to try and become the next active master.  If we        * do not succeed on our first attempt, this is no longer a cluster startup.        */
-name|this
-operator|.
-name|activeMasterManager
-operator|=
-operator|new
-name|ActiveMasterManager
-argument_list|(
-name|zooKeeper
-argument_list|,
-name|address
-argument_list|,
-name|this
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|zooKeeper
-operator|.
-name|registerListener
-argument_list|(
-name|activeMasterManager
-argument_list|)
-expr_stmt|;
-name|stallIfBackupMaster
-argument_list|(
-name|this
-operator|.
-name|conf
-argument_list|,
-name|this
-operator|.
-name|activeMasterManager
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|activeMasterManager
-operator|.
-name|blockUntilBecomingActiveMaster
+name|becomeActiveMaster
 argument_list|()
 expr_stmt|;
 comment|// We are either the active master or we were asked to shutdown
@@ -1816,49 +1778,71 @@ expr_stmt|;
 block|}
 end_function
 
+begin_comment
+comment|/**    * Try becoming active master.    * @return True if we could successfully become the active master.    * @throws InterruptedException    */
+end_comment
+
 begin_function
 specifier|private
-name|void
-name|loop
+name|boolean
+name|becomeActiveMaster
 parameter_list|()
+throws|throws
+name|InterruptedException
 block|{
-comment|// Check if we should stop every second.
-name|Sleeper
-name|sleeper
-init|=
+name|this
+operator|.
+name|activeMasterManager
+operator|=
 operator|new
-name|Sleeper
+name|ActiveMasterManager
 argument_list|(
-literal|1000
+name|zooKeeper
+argument_list|,
+name|address
 argument_list|,
 name|this
 argument_list|)
-decl_stmt|;
-while|while
-condition|(
-operator|!
+expr_stmt|;
 name|this
 operator|.
-name|stopped
-condition|)
-block|{
-name|sleeper
+name|zooKeeper
 operator|.
-name|sleep
-argument_list|()
+name|registerListener
+argument_list|(
+name|activeMasterManager
+argument_list|)
 expr_stmt|;
-block|}
+name|stallIfBackupMaster
+argument_list|(
+name|this
+operator|.
+name|conf
+argument_list|,
+name|this
+operator|.
+name|activeMasterManager
+argument_list|)
+expr_stmt|;
+return|return
+name|this
+operator|.
+name|activeMasterManager
+operator|.
+name|blockUntilBecomingActiveMaster
+argument_list|()
+return|;
 block|}
 end_function
 
 begin_comment
-comment|/**    * Finish initialization of HMaster after becoming the primary master.    *    *<ol>    *<li>Initialize master components - file system manager, server manager,    *     assignment manager, region server tracker, catalog tracker, etc</li>    *<li>Start necessary service threads - rpc server, info server,    *     executor services, etc</li>    *<li>Set cluster as UP in ZooKeeper</li>    *<li>Wait for RegionServers to check-in</li>    *<li>Split logs and perform data recovery, if necessary</li>    *<li>Ensure assignment of root and meta regions<li>    *<li>Handle either fresh cluster start or master failover</li>    *</ol>    *    * @throws IOException    * @throws InterruptedException    * @throws KeeperException    */
+comment|/**    * Initilize all ZK based system trackers.    * @throws IOException    * @throws InterruptedException    */
 end_comment
 
 begin_function
 specifier|private
 name|void
-name|finishInitialization
+name|initializeZKBasedSystemTrackers
 parameter_list|()
 throws|throws
 name|IOException
@@ -1867,75 +1851,6 @@ name|InterruptedException
 throws|,
 name|KeeperException
 block|{
-name|isActiveMaster
-operator|=
-literal|true
-expr_stmt|;
-comment|/*      * We are active master now... go initialize components we need to run.      * Note, there may be dross in zk from previous runs; it'll get addressed      * below after we determine if cluster startup or failover.      */
-comment|// TODO: Do this using Dependency Injection, using PicoContainer, Guice or Spring.
-name|this
-operator|.
-name|fileSystemManager
-operator|=
-operator|new
-name|MasterFileSystem
-argument_list|(
-name|this
-argument_list|,
-name|metrics
-argument_list|)
-expr_stmt|;
-comment|// publish cluster ID
-name|ClusterId
-operator|.
-name|setClusterId
-argument_list|(
-name|this
-operator|.
-name|zooKeeper
-argument_list|,
-name|fileSystemManager
-operator|.
-name|getClusterId
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|connection
-operator|=
-name|HConnectionManager
-operator|.
-name|getConnection
-argument_list|(
-name|conf
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|executorService
-operator|=
-operator|new
-name|ExecutorService
-argument_list|(
-name|getServerName
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|serverManager
-operator|=
-operator|new
-name|ServerManager
-argument_list|(
-name|this
-argument_list|,
-name|this
-argument_list|,
-name|metrics
-argument_list|)
-expr_stmt|;
 name|this
 operator|.
 name|catalogTracker
@@ -2107,6 +2022,132 @@ literal|", cluster-up flag was="
 operator|+
 name|wasUp
 argument_list|)
+expr_stmt|;
+block|}
+end_function
+
+begin_function
+specifier|private
+name|void
+name|loop
+parameter_list|()
+block|{
+comment|// Check if we should stop every second.
+name|Sleeper
+name|sleeper
+init|=
+operator|new
+name|Sleeper
+argument_list|(
+literal|1000
+argument_list|,
+name|this
+argument_list|)
+decl_stmt|;
+while|while
+condition|(
+operator|!
+name|this
+operator|.
+name|stopped
+condition|)
+block|{
+name|sleeper
+operator|.
+name|sleep
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+end_function
+
+begin_comment
+comment|/**    * Finish initialization of HMaster after becoming the primary master.    *    *<ol>    *<li>Initialize master components - file system manager, server manager,    *     assignment manager, region server tracker, catalog tracker, etc</li>    *<li>Start necessary service threads - rpc server, info server,    *     executor services, etc</li>    *<li>Set cluster as UP in ZooKeeper</li>    *<li>Wait for RegionServers to check-in</li>    *<li>Split logs and perform data recovery, if necessary</li>    *<li>Ensure assignment of root and meta regions<li>    *<li>Handle either fresh cluster start or master failover</li>    *</ol>    *    * @throws IOException    * @throws InterruptedException    * @throws KeeperException    */
+end_comment
+
+begin_function
+specifier|private
+name|void
+name|finishInitialization
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+throws|,
+name|KeeperException
+block|{
+name|isActiveMaster
+operator|=
+literal|true
+expr_stmt|;
+comment|/*      * We are active master now... go initialize components we need to run.      * Note, there may be dross in zk from previous runs; it'll get addressed      * below after we determine if cluster startup or failover.      */
+comment|// TODO: Do this using Dependency Injection, using PicoContainer, Guice or Spring.
+name|this
+operator|.
+name|fileSystemManager
+operator|=
+operator|new
+name|MasterFileSystem
+argument_list|(
+name|this
+argument_list|,
+name|metrics
+argument_list|)
+expr_stmt|;
+comment|// publish cluster ID
+name|ClusterId
+operator|.
+name|setClusterId
+argument_list|(
+name|this
+operator|.
+name|zooKeeper
+argument_list|,
+name|fileSystemManager
+operator|.
+name|getClusterId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|connection
+operator|=
+name|HConnectionManager
+operator|.
+name|getConnection
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|executorService
+operator|=
+operator|new
+name|ExecutorService
+argument_list|(
+name|getServerName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|serverManager
+operator|=
+operator|new
+name|ServerManager
+argument_list|(
+name|this
+argument_list|,
+name|this
+argument_list|,
+name|metrics
+argument_list|)
+expr_stmt|;
+name|initializeZKBasedSystemTrackers
+argument_list|()
 expr_stmt|;
 comment|// initialize master side coprocessors before we start handling requests
 name|this
@@ -5812,6 +5853,16 @@ parameter_list|)
 block|{
 if|if
 condition|(
+name|abortNow
+argument_list|(
+name|msg
+argument_list|,
+name|t
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
 name|t
 operator|!=
 literal|null
@@ -5844,6 +5895,163 @@ argument_list|(
 literal|"Aborting"
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+end_function
+
+begin_comment
+comment|/**    * We do the following.    * 1. Create a new ZK session. (since our current one is expired)    * 2. Try to become a primary master again    * 3. Initialize all ZK based system trackers.    * 4. Assign root and meta. (they are already assigned, but we need to update our    * internal memory state to reflect it)    * 5. Process any RIT if any during the process of our recovery.    *    * @return True if we could successfully recover from ZK session expiry.    * @throws InterruptedException    * @throws IOException    */
+end_comment
+
+begin_function
+specifier|private
+name|boolean
+name|tryRecoveringExpiredZKSession
+parameter_list|()
+throws|throws
+name|InterruptedException
+throws|,
+name|IOException
+throws|,
+name|KeeperException
+block|{
+name|this
+operator|.
+name|zooKeeper
+operator|=
+operator|new
+name|ZooKeeperWatcher
+argument_list|(
+name|conf
+argument_list|,
+name|MASTER
+operator|+
+literal|":"
+operator|+
+name|address
+operator|.
+name|getPort
+argument_list|()
+argument_list|,
+name|this
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|becomeActiveMaster
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+name|initializeZKBasedSystemTrackers
+argument_list|()
+expr_stmt|;
+comment|// Update in-memory structures to reflect our earlier Root/Meta assignment.
+name|assignRootAndMeta
+argument_list|()
+expr_stmt|;
+comment|// process RIT if any
+name|this
+operator|.
+name|assignmentManager
+operator|.
+name|processRegionsInTransition
+argument_list|()
+expr_stmt|;
+return|return
+literal|true
+return|;
+block|}
+end_function
+
+begin_comment
+comment|/**    * Check to see if the current trigger for abort is due to ZooKeeper session    * expiry, and If yes, whether we can recover from ZK session expiry.    *    * @param msg Original abort message    * @param t   The cause for current abort request    * @return true if we should proceed with abort operation, false other wise.    */
+end_comment
+
+begin_function
+specifier|private
+name|boolean
+name|abortNow
+parameter_list|(
+specifier|final
+name|String
+name|msg
+parameter_list|,
+specifier|final
+name|Throwable
+name|t
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|this
+operator|.
+name|isActiveMaster
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+if|if
+condition|(
+name|t
+operator|!=
+literal|null
+operator|&&
+name|t
+operator|instanceof
+name|KeeperException
+operator|.
+name|SessionExpiredException
+condition|)
+block|{
+try|try
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Primary Master trying to recover from ZooKeeper session "
+operator|+
+literal|"expiry."
+argument_list|)
+expr_stmt|;
+return|return
+operator|!
+name|tryRecoveringExpiredZKSession
+argument_list|()
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|newT
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Primary master encountered unexpected exception while "
+operator|+
+literal|"trying to recover from ZooKeeper session"
+operator|+
+literal|" expiry. Proceeding with server abort."
+argument_list|,
+name|newT
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+literal|true
+return|;
 block|}
 end_function
 
