@@ -87,6 +87,7 @@ Release 0.91.0 - Unreleased
                (Prakash Khemani)
    HBASE-3819  TestSplitLogWorker has too many SLWs running -- makes for
                contention and occasional failures
+   HBASE-3210  HBASE-1921 for the new master
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
